# openapi_merger

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  idea.txt  pyproject.toml
.github/workflows/: docker-publish.yml
docs/plans/: 2026-03-01-discard-paths.md  2026-03-01-docker-ghcr-pipeline.md  2026-03-01-e2e-integration-tests.md  2026-03-01-openapi-merger-design.md  2026-03-01-openapi-merger.md  2026-03-01-readme.md  2026-03-02-operation-id-collision.md
example/: service.yaml  sources.yaml
src/openapi_merger/: config.py  fetcher.py  main.py  merger.py  orchestrator.py  transformer.py
tests/: test_config.py  test_fetcher.py  test_integration.py  test_merger.py  test_orchestrator.py  test_transformer.py
tests/e2e/: conftest.py  test_e2e.py
tests/e2e/fixtures/: service_a.json  service_b.yaml
