[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-merger"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_merger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
